Player is implemented to a happy degree.... for now

--- a/Rej/Rej/Rej.vcxproj
+++ b/Rej/Rej/Rej.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="Resources.h" />
     <ClInclude Include="Scenery.h" />
     <ClInclude Include="UserInterface.h" />
+    <ClInclude Include="Xbox360Controller.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Building.cpp" />
@@ -145,6 +146,7 @@
     <ClCompile Include="Resources.cpp" />
     <ClCompile Include="Scenery.cpp" />
     <ClCompile Include="UserInterface.cpp" />
+    <ClCompile Include="Xbox360Controller.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
